// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot, items in cart 1`] = `
<DocumentFragment>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 0;
}

.c4 {
  width: 40%;
  margin-right: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
}

.c6 {
  font-family: "Barlow Condensed",sans-serif;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 1rem;
}

.c7 {
  font-family: "News Cycle",sans-serif;
  font-size: 1rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 0.5rem;
}

.c8 {
  font-family: "News Cycle",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  color: #207070;
  border: none;
  background-color: transparent;
  padding: 0;
}

.c1 {
  outline: none;
  background: transparent;
  color: #207070;
  font-family: "News Cycle",sans-serif;
  font-size: 1.4rem;
  font-weight: 700;
  cursor: pointer;
  border: none;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin: 0.5rem 0 0.5rem 7.5%;
}

.c1 i {
  margin-right: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5%;
  min-height: 45vh;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  border: 2px solid #207070;
  box-shadow: 4px 4px 4px rgba(0,0,0,0.25);
  margin-bottom: 1rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 0.5rem 0.25rem 0.5rem;
  border: 2px solid #207070;
  box-shadow: 4px 4px 4px rgba(0,0,0,0.25);
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-bottom: 1rem;
}

.c10 {
  font-family: "News Cycle",sans-serif;
  font-weight: 700;
  font-size: 1.2rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 0.25rem;
}

.c11 {
  font-weight: 400;
}

.c12 {
  background-color: #207070;
  border: 2px solid #207070;
  border-radius: 4px;
  color: #ffffff;
  font-family: "News Cycle",sans-serif;
  font-weight: 700;
  font-size: 1.2rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 2.5px 10px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c12:hover {
  color: #207070;
  background-color: #ffffff;
  cursor: pointer;
}

@media screen and (min-width:414px) {
  .c6 {
    font-size: 1.4rem;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    font-size: 2rem;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media screen and (min-width:414px) {
  .c7 {
    font-size: 1.2rem;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    font-size: 1.4rem;
  }
}

@media screen and (min-width:414px) {
  .c8 {
    font-size: 1.2rem;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media screen and (min-width:1024px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    width: 70%;
  }
}

@media screen and (min-width:1024px) {
  .c9 {
    margin-right: 15%;
  }
}

@media screen and (min-width:414px) {
  .c10 {
    font-size: 1.4rem;
  }
}

@media screen and (min-width:414px) {
  .c12 {
    font-size: 1.4rem;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    font-size: 1.6rem;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    margin-right: 15%;
  }
}

<div
    class="c0"
  >
    <button
      class="c1"
    >
      <i
        class="fas fa-long-arrow-alt-left"
      />
      Back
    </button>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <img
          class="c4"
          src="http://localhost:5000/items/item/undefined/image"
        />
        <div
          class="c5"
        >
          <p
            class="c6"
          />
          <p
            class="c7"
          >
            Price: $
          </p>
          <p
            class="c7"
          >
            Shipping: $
          </p>
          <button
            class="c8"
          >
            Remove
          </button>
        </div>
      </div>
      <div
        class="c3"
      >
        <img
          class="c4"
          src="http://localhost:5000/items/item/undefined/image"
        />
        <div
          class="c5"
        >
          <p
            class="c6"
          />
          <p
            class="c7"
          >
            Price: $
          </p>
          <p
            class="c7"
          >
            Shipping: $
          </p>
          <button
            class="c8"
          >
            Remove
          </button>
        </div>
      </div>
      <div
        class="c3"
      >
        <img
          class="c4"
          src="http://localhost:5000/items/item/undefined/image"
        />
        <div
          class="c5"
        >
          <p
            class="c6"
          />
          <p
            class="c7"
          >
            Price: $
          </p>
          <p
            class="c7"
          >
            Shipping: $
          </p>
          <button
            class="c8"
          >
            Remove
          </button>
        </div>
      </div>
      <div
        class="c3"
      >
        <img
          class="c4"
          src="http://localhost:5000/items/item/undefined/image"
        />
        <div
          class="c5"
        >
          <p
            class="c6"
          />
          <p
            class="c7"
          >
            Price: $
          </p>
          <p
            class="c7"
          >
            Shipping: $
          </p>
          <button
            class="c8"
          >
            Remove
          </button>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <p
        class="c10"
      >
        Shipping: 
        <span
          class="c11"
        >
          $NaN
        </span>
      </p>
      <p
        class="c10"
      >
        Items: 
        <span
          class="c11"
        >
          $NaN
        </span>
      </p>
      <p
        class="c10"
      >
        Subtotal: 
        <span
          class="c11"
        >
          $NaN
        </span>
      </p>
    </div>
    <button
      class="c12"
    >
      Checkout
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot, nothing in cart 1`] = `
<DocumentFragment>
  .c1 {
  outline: none;
  background: transparent;
  color: #207070;
  font-family: "News Cycle",sans-serif;
  font-size: 1.4rem;
  font-weight: 700;
  cursor: pointer;
  border: none;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin: 0.5rem 0 0.5rem 7.5%;
}

.c1 i {
  margin-right: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5%;
  min-height: 45vh;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  border: 2px solid #207070;
  box-shadow: 4px 4px 4px rgba(0,0,0,0.25);
  margin-bottom: 1rem;
}

.c4 {
  font-family: "News Cycle",sans-serif;
  font-weight: 700;
  font-size: 1.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #207070;
  margin-top: 1rem;
}

.c3 {
  font-family: "News Cycle",sans-serif;
  font-weight: 700;
  font-size: 1.2rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 0.25rem;
}

@media screen and (min-width:1024px) {
  .c2 {
    width: 70%;
  }
}

@media screen and (min-width:414px) {
  .c4 {
    font-size: 1.4rem;
  }
}

@media screen and (min-width:414px) {
  .c3 {
    font-size: 1.4rem;
  }
}

<div
    class="c0"
  >
    <button
      class="c1"
    >
      <i
        class="fas fa-long-arrow-alt-left"
      />
      Back
    </button>
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        There is nothing in your cart.
      </p>
      <a
        class="c4"
        href="/store"
      >
        Go add something!
      </a>
    </div>
  </div>
</DocumentFragment>
`;
